--- a/package.json
+++ b/package.json
@@ -3,36 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.0",
-    "@mui/material": "^5.6.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "buffer": "^6.0.3",
-    "fs": "^0.0.1-security",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "crypto": "^1.0.1",
+    "debug": "^4.1.1",
+    "elliptic": "^6.5.2",
+    "express": "^4.17.1",
     "keythereum": "^1.2.0",
-    "path": "^0.12.7",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "react-stepper-horizontal": "^1.0.11",
-    "stream": "^0.0.2",
-    "web-vitals": "^2.1.4"
+    "react": "^16.13.1",
+    "react-basic-table": "^1.0.16",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1",
+    "socket.io": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server.js"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
